# lilctx

./: .bully.yml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  clippy.toml  deny.toml  justfile
.claude/skills/create-release/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture.md  cli.md  configuration.md  getting-started.md  mcp.md  troubleshooting.md
src/: chunk.rs  cli.rs  config.rs  embed.rs  index.rs  main.rs  mcp.rs  store.rs  watch.rs
tests/: cli.rs  mcp.rs
tests/common/: mod.rs
